# Kiri

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NEXT_STEP.md  NOTICE  README.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: claude-tooling.md  ollama.ps1
docs/audit/: README.md
docs/audit/cross-cutting/: architecture-invariants.md  build-hygiene.md  consistency.md  duplication.md  error-handling.md  security.md  structure-modularization.md
docs/audit/modules/: agent.md  memory.md  provider.md  root.md  session.md  shared.md  sync.md  tools.md  tui-core.md  tui-infra.md
docs/audit/plan/: README.md  wave-1-security-correctness.md  wave-2-architecture-invariants.md  wave-3-modularization.md  wave-4-duplication.md  wave-5-consistency-cleanup.md
docs/audits/: 2026-07-09-full-sweep.md  2026-07-09-remediation-worklist.md
docs/decisions/: 0001-openai-compatible-provider.md  0002-tool-calling-and-sandbox.md  0003-modular-hexagonal-architecture.md  0004-rename-and-tui.md  0005-approval-modes-and-plan-flow.md  0006-rich-input-editor-and-multimodal-messages.md  0007-system-prompt-revision.md  0008-shell-backed-file-tools.md  0009-os-level-command-sandbox.md  0010-memory-and-docs-knowledge.md  0011-provider-agnostic-by-api-key.md  0012-config-and-secrets-storage.md  0013-session-persistence-and-learning.md  0014-semantic-recall-embeddings.md  0015-portable-profile-sync.md  0016-keyless-local-providers.md  0017-tui-input-buffer-domain-widget.md  0018-memory-store-model.md  0018-native-cross-platform-support.md  0019-instructions-layering.md  0019-linux-bwrap-sandbox.md  0020-env-file-and-file-only-secrets.md  0021-extensions-framework-and-trust-gating.md  0022-network-deny-by-default.md  0023-recall-memory-cross-store-dedup.md  0024-tokio-fs-timeout-non-cancellation.md  0025-streaming-deadline-and-raw-byte-cap.md  0026-child-process-env-scrubbing.md  0027-windows-private-file-dacl-inheritance.md  0028-bundled-default-extensions.md  0029-dispatchable-subagents.md
docs/marca/: branding.md
docs/reference/: model-thinking-parameters.md
solar-system/: index.html  package.json  tsconfig.json  vite.config.ts
solar-system/styles/: variables.css
src/: app.rs  architecture_guards.rs  characterization.rs  main.rs  modules.rs  services.rs  shared.rs
src/models/: chat.rs  tools.rs
src/modules/: agent.rs  tools.rs
src/modules/agent/: application.rs  domain.rs  infrastructure.rs
src/modules/extensions/: application.rs  domain.rs  (+1 more)
src/services/: chat.rs  sandbox.rs  tools.rs
src/shared/: infra.rs  kernel.rs  test_support.rs
src/snapshots/: characterization.json
(+262 files in other folders)
