[package]
name = "kiri"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dotenvy = "0.15.7"
eventsource-stream = "0.2.3"
ratatui = "0.30"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
pulldown-cmark = "0.13"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
