[package]
name = "kiri"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
blake3 = "1.7"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["event-stream"] }
eventsource-stream = "0.2.3"
ratatui = "0.30"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
    "process",
    "time",
    "io-util",
    # net: test-only (TcpListener in the hang/timeout regression tests); production HTTP goes through reqwest.
    "net",
] }
tokio-stream = "0.1.18"
pulldown-cmark = "0.13"
unicode-width = "0.2"
similar = "2.7"
tui-textarea-2 = { version = "0.11.0", default-features = false, features = ["crossterm"] }
arboard = { version = "3.6.1", features = ["image-data"] }
png = "0.18.1"
base64 = "0.22.1"
regex = "1.11"
uuid = { version = "1.12", features = ["v7", "serde"] }
toml = "0.8"
zeroize = "1"
dotenvy = "0.15.7"


[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
